Fixed various bugs (setting prev to 0 in AnimationTimer was a mistake...)